2010-02-25  Mario Carrion  <mario@carrion.mx>
In vimeo-sharp/:
	* VimeoSharp.sln:
	* VimeoSharp.userprefs:
	* VimeoSharp/Generator.cs:
	* VimeoSharp/Simple/User.cs:
	* VimeoSharp/Simple/Album.cs:
	* VimeoSharp/Simple/Group.cs:
	* VimeoSharp/Simple/Video.cs:
	* VimeoSharp/Simple/Helper.cs:
	* VimeoSharp/Simple/Channel.cs:
	* VimeoSharp/VimeoSharp.csproj:
	* VimeoSharpExample/Program.cs:
	* VimeoSharp/Simple/UserRequest.cs:
	* VimeoSharp/Simple/VideoRequest.cs:
	* VimeoSharp/Simple/LikedVideo.cs -> VimeoSharp/ConversionType.cs:
	* VimeoSharp/Simple/LikedVideo.cs -> VimeoSharp/XmlElementAttribute.cs:
	Using custom attributes to set the properties.

--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -45,12 +45,14 @@
     <Compile Include="Simple\Channel.cs" />
     <Compile Include="Simple\Group.cs" />
     <Compile Include="Simple\Helper.cs" />
-    <Compile Include="Simple\LikedVideo.cs" />
     <Compile Include="Simple\User.cs" />
     <Compile Include="Simple\UserRequest.cs" />
     <Compile Include="Simple\Video.cs" />
     <Compile Include="Simple\VideoRequest.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="XmlElementAttribute.cs" />
+    <Compile Include="Generator.cs" />
+    <Compile Include="ConversionType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
