2010-02-25  Mario Carrion  <mario@carrion.mx>
In /:
	* TODO: Group request removed.
In vimeo-sharp/:
	* VimeoSharp/VimeoSharp.csproj:
	* VimeoSharpExample/Program.cs:
	* VimeoSharp/Simple/GroupRequest.cs:
	Group request added.

--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="XmlElementAttribute.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="ConversionType.cs" />
+    <Compile Include="Simple\GroupRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
