2010-02-27  Mario Carrion  <mario@carrion.mx>
In vimeo-sharp/:
	* VimeoSharp/Simple/UserRequest.cs:
	* VimeoSharp/Simple/GroupRequest.cs:
	* VimeoSharp/Simple/VideoRequest.cs: Using RequestUrls.
	* VimeoSharp/RequestUrls.cs: File added.
	* VimeoSharp/VimeoSharp.csproj: Project updated.

--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Generator.cs" />
     <Compile Include="ConversionType.cs" />
     <Compile Include="Simple\GroupRequest.cs" />
+    <Compile Include="RequestUrls.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
