2010-02-27  Mario Carrion  <mario@carrion.mx>
In /:
	* TODO: Channel request removed.
In vimeo-sharp/:
	* VimeoSharp/RequestUrls.cs: Fixed VideoUrl.
	* VimeoSharpExample/Program.cs: Example updated to test
	  ChannelRequest.
	* VimeoSharp/Simple/UserRequest.cs,
	  VimeoSharp/Simple/VideoRequest.cs,
	  VimeoSharp/Simple/GroupRequest.cs: Removed unused references.
	* VimeoSharp/VimeoSharp.csproj,
	  VimeoSharpExample/VimeoSharpExample.csproj: Output name changed.
	* VimeoSharp/Simple/ChannelRequest.cs: File added.

--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VimeoSharp</RootNamespace>
-    <AssemblyName>VimeoSharp</AssemblyName>
+    <AssemblyName>vimeo-sharp</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -55,6 +55,7 @@
     <Compile Include="ConversionType.cs" />
     <Compile Include="Simple\GroupRequest.cs" />
     <Compile Include="RequestUrls.cs" />
+    <Compile Include="Simple\ChannelRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
