2010-02-27  Mario Carrion  <mario@carrion.mx>
In vimeo-sharp/:
	* VimeoSharp/RequestUrls.cs: AlbumUrl added.
	* VimeoSharp/Simple/Album.cs: New properperties added: UserId,
	  UserDisplayName and UserUrl.
	* VimeoSharp/VimeoSharp.csproj: File added.
	* VimeoSharpExample/Program.cs: Example updated to test
	  AlbumRequest.
	* VimeoSharp/Simple/AlbumRequest.cs: File added.

--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Simple\GroupRequest.cs" />
     <Compile Include="RequestUrls.cs" />
     <Compile Include="Simple\ChannelRequest.cs" />
+    <Compile Include="Simple\AlbumRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
