--- a/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
+++ b/vimeo-sharp/VimeoSharp/VimeoSharp.csproj
@@ -39,6 +39,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Simple\Album.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="RequestUrls.cs" />
     <Compile Include="Simple\ChannelRequest.cs" />
     <Compile Include="Simple\AlbumRequest.cs" />
+    <Compile Include="Advanced\OAuth.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
